# code-challenge-jn

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  PRD.txt  README.txt  SECURITY.md  TDD.txt  build-direct.sh  build.sh  run.sh
.claude/: settings.local.json
backend/src/: main.cpp
public/: index.html
